<resources>
    <string name="app_name">kovtunenko-v-18</string>
    <string name="nameApp">Музыка 5+</string>
    <string name="greeting">Добрый день, Саша!</string>
    <string name="avatarImageName">avatar</string>
    <string name="space">" "</string>
    <string name="spaces">"   "</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="x">X</string>
    <string name="ok">ок</string>
    <string name="search">Поиск песни</string>
    <string name="Input">Введите название</string>
    <string name="jazz">Джаз</string>
    <string name="star">Звезда</string>
    <string name="malina">Малиновый закат</string>
    <string name="heart_attack">Heart Attack</string>
    <string name="fall">Падали</string>
    <string name="ramil">Ramil\'</string>
    <string name="_2_01">2:01</string>
    <string name="shine">Сияй</string>
    <string name="_2_39">2:39</string>
    <string name="more">Показать ещё</string>
    <string name="todo">TODO</string>
    <string name="_3_13">3:13</string>
    <string name="_3_40">3:40</string>
    <string name="indie">Инди</string>
    <string name="_2_24">2:24</string>
    <string name="_2_57">2:57</string>
    <string name="king_scar">King, Scar.</string>
    <string name="scarlxrd">Scarlxrd</string>
    <string name="max">Макс Корж</string>
    <string name="genre">Жанр</string>
    <string name="rock">Рок</string>
    <string name="pop">Поп</string>
    <string name="_3_59">3:59</string>
    <string name="gory">Горы по колено</string>
    <string name="butterflies">Бабочки</string>
    <string name="lizer">Lizer</string>
    <string name="popular">Популярное</string>
    <string name="_2_53">2:53</string>
    <string name="DM">Здесь было изображение</string>
</resources>