<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/nameApp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/avatarImageName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="107dp"
        android:fontFamily="@font/candal"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <TextView
        android:id="@+id/char_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:width="30dp"
        android:height="30dp"
        android:background="@drawable/border_bottom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/char_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/char_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:width="30dp"
        android:height="30dp"
        android:background="@drawable/border_bottom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/char_3"
        app:layout_constraintStart_toEndOf="@+id/char_1"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/char_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="30dp"
        android:height="30dp"
        android:background="@drawable/border_bottom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/char_4"
        app:layout_constraintStart_toEndOf="@+id/char_2"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/char_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:width="30dp"
        android:height="30dp"
        android:background="@drawable/border_bottom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/char_3"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_1"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/char_1" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_2"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/char_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_3"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/char_1" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_6"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#23D5A2"
        android:lines="1"
        android:text="@string/ok"
        android:textColor="#000"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_12" />

    <Button
        android:id="@+id/button_12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_9"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_5"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_4"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_0"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_4"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_11" />

    <Button
        android:id="@+id/button_11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_8"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_4"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_4"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/_7"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="#9CB2FF"
        android:backgroundTint="#9CB2FF"
        android:backgroundTintMode="add"
        android:text="@string/x"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />
</androidx.constraintlayout.widget.ConstraintLayout>